--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,20 +15,22 @@
 <div id="elm"></div>
 <script>
 
-    var storedState = localStorage.getItem('model');
-    var startingState = storedState ? JSON.parse(storedState) : null;
+    const storedState = localStorage.getItem('model');
+    const startingState = storedState ? JSON.parse(storedState) : null;
 
-    var app = Elm.Main.init({
+    const app = Elm.Main.init({
         node: document.getElementById('elm'),
         flags: startingState
     });
 
     app.ports.setStorage.subscribe(function(state) {
+        console.log(state);
         localStorage.setItem('model', JSON.stringify(state));
     });
 
     
     app.ports.removeStorage.subscribe(function() {
+        console.log('Removing')
         localStorage.removeItem('model');
     });
 
