--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,12 +20,13 @@
 
     const app = Elm.Main.init({
         node: document.getElementById('elm'),
-        flags: startingState
+        flags: startingState,
     });
 
     app.ports.setStorage.subscribe(function(state) {
         console.log(state);
         localStorage.setItem('model', JSON.stringify(state));
+        // setTimeout(function() { app.ports.onStoreChange.send(state); }, 0);
     });
 
     
